ジオコーディング

--- a/MapKitSample/Info.plist
+++ b/MapKitSample/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationUsageDescription</key>
+	<string>位置情報を使います。</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>位置情報を使います。</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
